fixed alignment on projects

--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ body {
   border-color: 2px solid black;
 }
 
-#dogMeetUp, #hangman, #rainyDay {
+.project {
   display: -webkit-inline-box;
   max-width: 400px;
   padding: 20px;
